--- a/dockprom-master/alertmanager/config.yml
+++ b/dockprom-master/alertmanager/config.yml
@@ -11,5 +11,5 @@ receivers:
             api_url: 'https://hooks.slack.com/services/<webhook-id>'
     - name: 'telegram'
       telegram_configs:
-        - bot_token: "6389154225:AAHkydAGtyUfrsezIsL7nCtJKvbVUVK2UG8"
-          chat_id: -1001731654975
+        - bot_token: '7072922648:AAG81NKKAf8ieDpDOfwCv_ghSt5hH3aN4-I'
+          chat_id: -420795459
